# syncr

./: Cargo.toml
src/: iroh_utils.rs  main.rs  protocol.rs  store.rs  sync_manager.rs  sync_utils.rs  watcher.rs
src/cli/: allow.rs  copy.rs  info.rs  mod.rs  serve.rs  sync.rs  watch.rs
